// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DangerIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-DangerIcon"
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-DangerIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
    stroke="#fff"
  />
</Icon>
`;

exports[`DangerIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-DangerIcon lucid-DangerIcon-is-clickable"
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-DangerIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
    stroke="#fff"
  />
</Icon>
`;

exports[`DangerIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-DangerIcon lucid-DangerIcon-is-disabled"
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-DangerIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
    stroke="#fff"
  />
</Icon>
`;
